@@ -3,12 +3,10 @@ Section: net
 Priority: optional
 Maintainer: Yaroslav Halchenko <debian@onerussian.com>
 Build-Depends: debhelper (>= 5.0.37.2), python (>= 2.5.4-1~)
-Build-Depends-Indep: python-central (>= 0.5.6)
-XS-Python-Version: current, >= 2.4
 Homepage: http://www.fail2ban.org
 Vcs-Git: git://github.com/fail2ban/fail2ban.git
 Vcs-Browser: http://github.com/fail2ban/fail2ban
-Standards-Version: 3.9.2
+Standards-Version: 3.9.3
 
 
 Package: fail2ban
